Name:                puzzle-draw-snap
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable puzzle-draw-snap
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.2,
    bytestring                >= 0.9.1,
    mtl                       >= 2,
    snap-core                 >= 0.9,
    snap-server               >= 0.9,
    svg-builder               >= 0.1,
    diagrams-lib              >= 1.2,
    diagrams-svg              >= 1.1,
    aeson                     >= 0.7,
    yaml                      >= 0.8.4,
    filepath                  >= 1.3,
    directory                 >= 1.2,
    transformers              >= 0.3,
    puzzle-draw               >= 0.2,
    text                      >= 1.2

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
